{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "6c1b070e-5040-43bf-9a4e-cbc7a06ccb98",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "dcb69bc4-1381-42c4-97fb-067ffcbb7530",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "42ca89da-72f9-452b-bf29-5018f7a6a945",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "8118dd5a-9796-48b0-8222-3d152dedffe8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "27fbf11a-591d-4430-a33a-80389d316b2c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SprintStart",
                    "type": "Button",
                    "id": "19dc4154-327a-4836-b488-aa5adbd72044",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SprintStop",
                    "type": "Button",
                    "id": "8bbcddb2-ba18-44a6-9c29-897e73109df7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b6f17c8b-a16a-4784-a8e7-fc0a501c3dc4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e12e32a8-134d-4416-bcfc-2481570cfa35",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0ea57108-df65-4249-aad9-b5533f426480",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "357125de-b625-4b6a-a5dc-a0eafe654627",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "92f2b0e2-8202-4f39-98ee-ace7003d1505",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c8463a69-b29d-4915-95e9-0a14f582179f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80a1ceae-9aba-4c75-be55-2cc0d5506e33",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e20f2610-993b-4f65-ab93-62823236e6ec",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "def9d81e-ad20-432c-a5c8-5ba32579b717",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SprintStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e592d371-03db-426d-b22b-30e85251b18d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SprintStop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}